# document-processor

backend/: pyproject.toml
backend/app/: contracts.py  excerpts.py  extract_candidates.py  heuristics.py  ingest.py  layout_builder.py  llm_client.py  models.py  pdf_text.py  routing.py  runfs.py  schema_resolver.py  trace.py  validate.py
backend/tests/: test_contracts.py  test_extract_candidates.py  test_heuristics.py  test_ingest.py  test_layout_builder.py  test_llm_client.py  test_models.py  test_pdf_text.py  test_routing.py  test_runfs.py  test_schema_resolver.py  test_trace.py  test_validate.py
docs/: charter.md  slice_1_pr_roadmap.md  slice_1_spec.md  slice_roadmap.md
