[project]
name = "document-processor"
version = "0.1.0"
description = "Evidence-first form population pipeline"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0",
    "pypdf>=4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
